--- a/presto-plugin/pom.xml
+++ b/presto-plugin/pom.xml
@@ -10,10 +10,12 @@
         <version>20200610</version>
     </parent>
 
+
+
     <groupId>com.presto.plugin</groupId>
     <artifactId>presto-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>presto-plugin</packaging>
 
     <name>presto-plugin</name>
     <!-- FIXME change it to the project's website -->
@@ -29,6 +31,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.prestosql</groupId>
