--- a/presto-plugin/pom.xml
+++ b/presto-plugin/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>guava</artifactId>
             <version>26.0-jre</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.googlejavaformat</groupId>
+            <artifactId>google-java-format</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
