--- a/presto-plugin/pom.xml
+++ b/presto-plugin/pom.xml
@@ -15,7 +15,7 @@
     <groupId>com.presto.plugin</groupId>
     <artifactId>presto-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>presto-plugin</packaging>
+    <packaging>jar</packaging>
 
     <name>presto-plugin</name>
     <!-- FIXME change it to the project's website -->
