--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.project.server</groupId>
     <artifactId>mvn-project-root</artifactId>
     <packaging>pom</packaging>
-    <version>20200610</version>
+    <version>${global.version}</version>
 
     <name>mvn-project-root</name>
     <!-- FIXME change it to the project's website -->
@@ -19,6 +19,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <jdk.version>1.8</jdk.version>
         <checkstyle.skip>true</checkstyle.skip>
+        <global.version>0.1-SNAPSHOT</global.version>
     </properties>
 
     <modules>
